Playlisten change/new implemented

--- a/HFModel/src/de/adfprojectsesions/hf/model/adfbc/views/HfPlaylistView.xml
+++ b/HFModel/src/de/adfprojectsesions/hf/model/adfbc/views/HfPlaylistView.xml
@@ -12,7 +12,21 @@
   BindingStyle="OracleName"
   CustomQuery="false"
   SelectAllAttributes="false"
-  PageIterMode="Full">
+  PageIterMode="Full"
+  ComponentClass="de.adfprojectsesions.hf.model.adfbc.views.HfPlaylistViewImpl"
+  ComponentInterface="de.adfprojectsesions.hf.model.adfbc.views.common.HfPlaylistView"
+  ClientProxyName="de.adfprojectsesions.hf.model.adfbc.views.client.HfPlaylistViewClient">
+  <DesignTime>
+    <Attr Name="_codeGenFlag2" Value="Coll|VarAccess"/>
+  </DesignTime>
+  <Variable
+    Name="bindSearchTerm"
+    Kind="viewcriteria"
+    Type="java.lang.String"/>
+  <Variable
+    Name="bindUserId"
+    Kind="viewcriteria"
+    Type="java.lang.Long"/>
   <ViewAccessor
     Name="HfUserViewLookupLOV"
     ViewObjectName="de.adfprojectsesions.hf.model.adfbc.views.HfUserView"
@@ -105,6 +119,8 @@
       <SchemaBasedProperties>
         <CONTROLTYPE
           Value="choice"/>
+        <DISPLAYWIDTH
+          Value="50"/>
       </SchemaBasedProperties>
     </Properties>
   </ViewAttribute>
@@ -113,7 +129,16 @@
     PrecisionRule="true"
     EntityAttrName="Description"
     EntityUsage="HfPlaylist"
-    AliasName="DESCRIPTION"/>
+    AliasName="DESCRIPTION">
+    <Properties>
+      <SchemaBasedProperties>
+        <DISPLAYWIDTH
+          Value="70"/>
+        <DISPLAYHEIGHT
+          Value="3"/>
+      </SchemaBasedProperties>
+    </Properties>
+  </ViewAttribute>
   <ViewAttribute
     Name="IntSeq"
     PrecisionRule="true"
@@ -125,13 +150,81 @@
     PrecisionRule="true"
     EntityAttrName="LastChange"
     EntityUsage="HfPlaylist"
-    AliasName="LAST_CHANGE"/>
+    AliasName="LAST_CHANGE">
+    <Properties>
+      <SchemaBasedProperties>
+        <FMT_FORMAT
+          ResId="de.adfprojectsesions.hf.model.adfbc.views.HfPlaylistView.LastChange_FMT_FORMAT"/>
+        <FMT_FORMATTER
+          ResId="de.adfprojectsesions.hf.model.adfbc.views.HfPlaylistView.LastChange_FMT_FORMATTER"/>
+      </SchemaBasedProperties>
+    </Properties>
+  </ViewAttribute>
   <ViewAttribute
     Name="ShareFlag"
     PrecisionRule="true"
     EntityAttrName="ShareFlag"
     EntityUsage="HfPlaylist"
     AliasName="SHARE_FLAG"/>
+  <ViewCriteria
+    Name="PlaylistByNameOrDescriptionVC"
+    ViewObjectName="de.adfprojectsesions.hf.model.adfbc.views.HfPlaylistView"
+    Conjunction="AND">
+    <Properties Name="_Props">
+      <CustomProperties>
+        <Property
+          Name="autoExecute"
+          Value="true"/>
+        <Property
+          Name="mode"
+          Value="Basic"/>
+        <Property
+          Name="allowConjunctionOverride"
+          Value="false"/>
+        <Property
+          Name="showInList"
+          Value="false"/>
+        <Property
+          Name="displayOperators"
+          Value="Never"/>
+      </CustomProperties>
+    </Properties>
+    <ViewCriteriaRow
+      Name="HfPlaylistViewCriteria_row_0"
+      UpperColumns="1"
+      Conjunction="AND">
+      <ViewCriteriaItem
+        Name="PlaylistName"
+        ViewAttribute="PlaylistName"
+        Operator="CONTAINS"
+        Conjunction="AND"
+        Value=":bindSearchTerm"
+        IsBindVarValue="true"
+        Required="Optional"/>
+      <ViewCriteriaItem
+        Name="HfPlaylistViewCriteria_HfPlaylistViewCriteria_row_0_Description"
+        ViewAttribute="Description"
+        Operator="CONTAINS"
+        Conjunction="OR"
+        Value=":bindSearchTerm"
+        Required="Optional"
+        IsBindVarValue="true"/>
+    </ViewCriteriaRow>
+    <ViewCriteriaRow
+      Name="PlaylistByNameOrDescriptionVC_row_1"
+      Conjunction="AND"
+      UpperColumns="1">
+      <ViewCriteriaItem
+        Name="HfUserIk"
+        ViewAttribute="HfUserIk"
+        Operator="="
+        Conjunction="AND"
+        Value=":bindUserId"
+        ValidateBindVars="true"
+        IsBindVarValue="true"
+        Required="Required"/>
+    </ViewCriteriaRow>
+  </ViewCriteria>
   <ViewLinkAccessor
     Name="HfPlaylistPosView"
     ViewLink="de.adfprojectsesions.hf.model.adfbc.views.viewlinks.HfPlaylistPosFk1Link"
@@ -142,4 +235,24 @@
     ViewLink="de.adfprojectsesions.hf.model.adfbc.views.viewlinks.HfPlaylistRatFk1Link"
     Type="oracle.jbo.RowIterator"
     IsUpdateable="false"/>
+  <ClientInterface
+    Name="__clientInterface">
+    <Method
+      Name="searchDescriptionByUserId"
+      MethodName="searchDescriptionByUserId">
+      <Return
+        Name="_return_type_"
+        Type="void"/>
+      <Parameter
+        Name="searchTerm"
+        Type="java.lang.String"/>
+      <Parameter
+        Name="userId"
+        Type="java.lang.Long"/>
+    </Method>
+  </ClientInterface>
+  <ResourceBundle>
+    <PropertiesBundle
+      PropertiesFile="de.adfprojectsesions.hf.model.HFModelBundle"/>
+  </ResourceBundle>
 </ViewObject>
