--- a/HFModel/src/de/adfprojectsesions/hf/model/adfbc/views/HfSharedPlaylistView.xml
+++ b/HFModel/src/de/adfprojectsesions/hf/model/adfbc/views/HfSharedPlaylistView.xml
@@ -29,6 +29,50 @@
     Name="bindSearchTerm"
     Kind="viewcriteria"
     Type="java.lang.String"/>
+  <ViewAccessor
+    Name="HfCatView1"
+    ViewObjectName="de.adfprojectsesions.hf.model.adfbc.views.HfCatView"
+    RowLevelBinds="true"/>
+  <ViewAccessor
+    Name="HfUserView1"
+    ViewObjectName="de.adfprojectsesions.hf.model.adfbc.views.HfUserView"
+    RowLevelBinds="true"/>
+  <ListBinding
+    Name="LOV_HfCatIk"
+    ListVOName="HfCatView1"
+    ListRangeSize="-1"
+    NullValueFlag="none"
+    MRUCount="0">
+    <AttrArray Name="AttrNames">
+      <Item Value="HfCatIk"/>
+    </AttrArray>
+    <AttrArray Name="AttrExpressions"/>
+    <AttrArray Name="ListAttrNames">
+      <Item Value="IntKey"/>
+    </AttrArray>
+    <AttrArray Name="ListDisplayAttrNames">
+      <Item Value="CatName"/>
+    </AttrArray>
+    <DisplayCriteria/>
+  </ListBinding>
+  <ListBinding
+    Name="LOV_HfUserIk"
+    ListVOName="HfUserView1"
+    ListRangeSize="-1"
+    NullValueFlag="none"
+    MRUCount="0">
+    <AttrArray Name="AttrNames">
+      <Item Value="HfUserIk"/>
+    </AttrArray>
+    <AttrArray Name="AttrExpressions"/>
+    <AttrArray Name="ListAttrNames">
+      <Item Value="IntKey"/>
+    </AttrArray>
+    <AttrArray Name="ListDisplayAttrNames">
+      <Item Value="Longname"/>
+    </AttrArray>
+    <DisplayCriteria/>
+  </ListBinding>
   <EntityUsage
     Name="HfPlaylist"
     Entity="de.adfprojectsesions.hf.model.adfbc.entities.HfPlaylist"/>
@@ -44,14 +88,30 @@
     PrecisionRule="true"
     EntityAttrName="HfCatIk"
     EntityUsage="HfPlaylist"
-    AliasName="HF_CAT_IK"/>
+    AliasName="HF_CAT_IK"
+    LOVName="LOV_HfCatIk">
+    <Properties>
+      <SchemaBasedProperties>
+        <CONTROLTYPE
+          Value="choice"/>
+      </SchemaBasedProperties>
+    </Properties>
+  </ViewAttribute>
   <ViewAttribute
     Name="HfUserIk"
     IsNotNull="true"
     PrecisionRule="true"
     EntityAttrName="HfUserIk"
     EntityUsage="HfPlaylist"
-    AliasName="HF_USER_IK"/>
+    AliasName="HF_USER_IK"
+    LOVName="LOV_HfUserIk">
+    <Properties>
+      <SchemaBasedProperties>
+        <CONTROLTYPE
+          Value="choice"/>
+      </SchemaBasedProperties>
+    </Properties>
+  </ViewAttribute>
   <ViewAttribute
     Name="IntKey"
     IsNotNull="true"
@@ -92,19 +152,19 @@
       <CustomProperties>
         <Property
           Name="autoExecute"
-          Value="false"/>
+          Value="true"/>
         <Property
           Name="mode"
           Value="Basic"/>
         <Property
           Name="allowConjunctionOverride"
-          Value="true"/>
+          Value="false"/>
         <Property
           Name="showInList"
-          Value="true"/>
+          Value="false"/>
         <Property
           Name="displayOperators"
-          Value="InAdvancedMode"/>
+          Value="Never"/>
       </CustomProperties>
     </Properties>
     <ViewCriteriaRow
