--- a/HFModel/src/de/adfprojectsesions/hf/model/adfbc/views/HfCatByUserView.xml
+++ b/HFModel/src/de/adfprojectsesions/hf/model/adfbc/views/HfCatByUserView.xml
@@ -71,7 +71,7 @@
     PrecisionRule="true"
     EntityAttrName="ParentHfCatIk"
     EntityUsage="HfCat"
-    AliasName="PARENT_HF_CAT_IK_"/>
+    AliasName="PARENT_HF_CAT_IK"/>
   <ResourceBundle>
     <PropertiesBundle
       PropertiesFile="de.adfprojectsesions.hf.model.HFModelBundle"/>
